<resources>
    <string name="app_name">Manager Finansowy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="transactions_count">Ilość Transakcji</string>
    <string name="summary">Podsumowanie</string>
    <string name="main_page">Strona Główna</string>
    <string name="expenses">Wydatki</string>
    <string name="incomes">Przychody</string>
    <string name="monthly_statistics">Zestawienie Miesięczne</string>
    <string name="add_expense">Dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="null_string"></string>
    <string name="hint_name">Miejsce transakcji</string>
    <string name="hint_price">Kwota</string>
    <string name="hint_date">Data i godzina</string>
    <string name="month_stats">Bilans</string>
    <string name="search">Szukaj</string>
    <string name="share">Udostępnij</string>
    <string name="send">Wyślij raport finansowy ...</string>
    <string name="name">Nazwa</string>
    <string name="category">Kategoria</string>
    <string name="date">Data</string>

    <string-array name="add_category_spinner">
        <item>Inne wydatki</item>
        <item>Inne opłaty i rachunki</item>
        <item>Przelew</item>
        <item>Jedzenie</item>
        <item>Transport</item>
        <item>Mieszkanie</item>
        <item>Zdrowie i higiena</item>
        <item>Ubranie</item>
        <item>Relaks</item>
    </string-array>

    <string-array name="month_spinner">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
