<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MonthStatsFragment"
    android:theme="@style/Fragment">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <FrameLayout
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_edge"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="25px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <Spinner
                        android:id="@+id/month_spinner_selector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <FrameLayout
                android:layout_margin="10dp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_edge"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="25px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:paddingRight="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/outline_tag_24"
                                android:layout_weight="1"/>

                            <TextView
                                android:text="@string/transactions_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:layout_weight="1"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/transaction_count_monthStats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>


            <FrameLayout
                android:layout_margin="10dp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_edge"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bilans_card"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="25px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:layout_gravity="center"
                                android:paddingRight="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/outline_account_balance_wallet_24"
                                android:layout_weight="1"/>

                            <TextView
                                android:text="@string/month_stats"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:layout_weight="1"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/money_month_stats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2">

            <FrameLayout
                android:layout_margin="10dp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_edge"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/income_card"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="25px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:paddingRight="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/outline_trending_up_24"
                                android:layout_weight="1"/>

                            <TextView
                                android:text="@string/incomes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:layout_weight="1"/>
                        </LinearLayout>



                        <TextView
                            android:id="@+id/income_month_stats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_margin="10dp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_edge"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/expenses_card"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="25px"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:paddingRight="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/outline_trending_down_24"
                                android:layout_weight="1"/>

                            <TextView
                                android:text="@string/expenses"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:layout_weight="1"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/expenses_mont_stats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <pjatk.prm.s17918.managerfinansowy.custom.views.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>